@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2011-05-21"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20110521
-#define RUBY_PATCHLEVEL 343
+#define RUBY_PATCHLEVEL 344
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
